// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <SearchPage/> debe de mostrar a Batman y el input con el valor del querystring 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1>
        Search Page
      </h1>
      <hr />
      <div
        class="row"
      >
        <div
          class="col-5"
        >
          <h4>
            Searching
          </h4>
          <hr />
          <form
            aria-label="form"
          >
            <input
              autocomplete="off"
              class="form-control"
              name="searchText"
              placeholder="Search a hero"
              type="text"
              value="batman"
            />
            <button
              class="btn btn-outline-primary mt-2"
            >
              Search
            </button>
          </form>
        </div>
        <div
          class="col-7"
        >
          <h4>
            Results
          </h4>
          <hr />
          <div
            aria-label="div-search"
            class="alert alert-primary animate__animated animate__fadeIn"
            style="display: none;"
          >
            Search a hero 
          </div>
          <div
            aria-label="div-alert"
            class="alert alert-danger animate__animated animate__fadeIn"
            style="display: none;"
          >
             No hero with 
            <b>
              batman
            </b>
             
          </div>
          <div
            class="col"
          >
            <div
              class="card animate__animated animate__fadeIn"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4 "
                >
                  <img
                    alt="Batman"
                    class="card-img"
                    src="assets/heroes/dc-batman.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                    >
                      Batman
                    </h5>
                    <p
                      class="card-text"
                    >
                      Bruce Wayne
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Detective Comics #27
                      </small>
                    </p>
                    <a
                      href="/hero/dc-batman"
                    >
                      Mas..
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <h1>
      Search Page
    </h1>
    <hr />
    <div
      class="row"
    >
      <div
        class="col-5"
      >
        <h4>
          Searching
        </h4>
        <hr />
        <form
          aria-label="form"
        >
          <input
            autocomplete="off"
            class="form-control"
            name="searchText"
            placeholder="Search a hero"
            type="text"
            value="batman"
          />
          <button
            class="btn btn-outline-primary mt-2"
          >
            Search
          </button>
        </form>
      </div>
      <div
        class="col-7"
      >
        <h4>
          Results
        </h4>
        <hr />
        <div
          aria-label="div-search"
          class="alert alert-primary animate__animated animate__fadeIn"
          style="display: none;"
        >
          Search a hero 
        </div>
        <div
          aria-label="div-alert"
          class="alert alert-danger animate__animated animate__fadeIn"
          style="display: none;"
        >
           No hero with 
          <b>
            batman
          </b>
           
        </div>
        <div
          class="col"
        >
          <div
            class="card animate__animated animate__fadeIn"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col-4 "
              >
                <img
                  alt="Batman"
                  class="card-img"
                  src="assets/heroes/dc-batman.jpg"
                />
              </div>
              <div
                class="col-8"
              >
                <div
                  class="card-body"
                >
                  <h5
                    class="card-title"
                  >
                    Batman
                  </h5>
                  <p
                    class="card-text"
                  >
                    Bruce Wayne
                  </p>
                  <p
                    class="card-text"
                  >
                    <small
                      class="text-muted"
                    >
                      Detective Comics #27
                    </small>
                  </p>
                  <a
                    href="/hero/dc-batman"
                  >
                    Mas..
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pruebas en el <SearchPage/> debe de mostrar un error sino encuentra a batman 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1>
        Search Page
      </h1>
      <hr />
      <div
        class="row"
      >
        <div
          class="col-5"
        >
          <h4>
            Searching
          </h4>
          <hr />
          <form
            aria-label="form"
          >
            <input
              autocomplete="off"
              class="form-control"
              name="searchText"
              placeholder="Search a hero"
              type="text"
              value="batman123"
            />
            <button
              class="btn btn-outline-primary mt-2"
            >
              Search
            </button>
          </form>
        </div>
        <div
          class="col-7"
        >
          <h4>
            Results
          </h4>
          <hr />
          <div
            aria-label="div-search"
            class="alert alert-primary animate__animated animate__fadeIn"
            style="display: none;"
          >
            Search a hero 
          </div>
          <div
            aria-label="div-alert"
            class="alert alert-danger animate__animated animate__fadeIn"
          >
             No hero with 
            <b>
              batman123
            </b>
             
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <h1>
      Search Page
    </h1>
    <hr />
    <div
      class="row"
    >
      <div
        class="col-5"
      >
        <h4>
          Searching
        </h4>
        <hr />
        <form
          aria-label="form"
        >
          <input
            autocomplete="off"
            class="form-control"
            name="searchText"
            placeholder="Search a hero"
            type="text"
            value="batman123"
          />
          <button
            class="btn btn-outline-primary mt-2"
          >
            Search
          </button>
        </form>
      </div>
      <div
        class="col-7"
      >
        <h4>
          Results
        </h4>
        <hr />
        <div
          aria-label="div-search"
          class="alert alert-primary animate__animated animate__fadeIn"
          style="display: none;"
        >
          Search a hero 
        </div>
        <div
          aria-label="div-alert"
          class="alert alert-danger animate__animated animate__fadeIn"
        >
           No hero with 
          <b>
            batman123
          </b>
           
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pruebas en el <SearchPage/> debe de mostrarse correctamente con los valores por defecto 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1>
        Search Page
      </h1>
      <hr />
      <div
        class="row"
      >
        <div
          class="col-5"
        >
          <h4>
            Searching
          </h4>
          <hr />
          <form
            aria-label="form"
          >
            <input
              autocomplete="off"
              class="form-control"
              name="searchText"
              placeholder="Search a hero"
              type="text"
              value=""
            />
            <button
              class="btn btn-outline-primary mt-2"
            >
              Search
            </button>
          </form>
        </div>
        <div
          class="col-7"
        >
          <h4>
            Results
          </h4>
          <hr />
          <div
            aria-label="div-search"
            class="alert alert-primary animate__animated animate__fadeIn"
          >
            Search a hero 
          </div>
          <div
            aria-label="div-alert"
            class="alert alert-danger animate__animated animate__fadeIn"
            style="display: none;"
          >
             No hero with 
            <b />
             
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <h1>
      Search Page
    </h1>
    <hr />
    <div
      class="row"
    >
      <div
        class="col-5"
      >
        <h4>
          Searching
        </h4>
        <hr />
        <form
          aria-label="form"
        >
          <input
            autocomplete="off"
            class="form-control"
            name="searchText"
            placeholder="Search a hero"
            type="text"
            value=""
          />
          <button
            class="btn btn-outline-primary mt-2"
          >
            Search
          </button>
        </form>
      </div>
      <div
        class="col-7"
      >
        <h4>
          Results
        </h4>
        <hr />
        <div
          aria-label="div-search"
          class="alert alert-primary animate__animated animate__fadeIn"
        >
          Search a hero 
        </div>
        <div
          aria-label="div-alert"
          class="alert alert-danger animate__animated animate__fadeIn"
          style="display: none;"
        >
           No hero with 
          <b />
           
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
